--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         Hello World
-        <img src="globe.jpg">
+        <img src="globe.jpg" width="100px" height="100px">
     </body>
 </html>
