--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,5 +6,7 @@
     <body>
         Hello World
         <img src="globe.jpg" width="100px" height="100px">
+        <img src="image/globe.jpg" width="100px" height="100px">
+        <img src="image/globe.png" width="100px" height="100px">
     </body>
 </html>
