--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,9 +5,9 @@
     </head>
     <body>
         Hello World
-        <img src="globe.jpg" width="100px" height="100px">
-        <img src="globe.JPG" width="100px" height="100px">
-        <img src="image/globe.jpg" width="100px" height="100px">
-        <img src="image/globe.png" width="100px" height="100px">
+        <img src="globe.jpg" width="100px" height="100px">1
+        <img src="globe.JPG" width="100px" height="100px">2
+        <img src="image/globe.jpg" width="100px" height="100px">3
+        <img src="image/globe.png" width="100px" height="100px">4
     </body>
 </html>
